mule-user-guide/v/3.2/using-transformers.adoc
= Using Transformers

Transformers convert message payloads to formats expected by their destinations. Mule ESB provides many standard transformers, which you configure using predefined elements and attributes in your Mule XML configuration file. You can also configure custom transformers using the `<custom-transformer>` element, in which you specify the fully qualified class name of the custom transformer class. For more information on creating and configuring a custom transformer, see link:/documentation-3.2/display/32X/Creating+Custom+Transformers[Creating Custom Transformers].

Standard transformers are easier to use than custom transformers. You don't need to know the Java name of the transformer, and all properties are explicitly declared in a Mule configuration schema. Following is an example of declaring the standard Append String transformer, which appends string text to the original message payload:

[source, xml, linenums]
----
<append-string-transformer name="myAppender" message=" ... that's good to know!"/>
----

If the original message payload was the string "foo", the transformer above would convert the string to "foo ... that's good to know!".

The MULE3USER:Available Transformers section of this page describes all the standard transformers provided with Mule. Additionally, many link:/documentation-3.2/display/32X/Transports+Reference[transports] and link:/documentation-3.2/display/32X/Modules+Reference[modules] have their own transformers, such as the ObjectToJMSMessage transformer for the JMS transport.

== Configuring Transformers

You can configure a transformer _locally_ or _globally_. You configure a local transformer right on the endpoint or in a Flow or where you want to apply it, whereas you configure a global transformer before any `<model>` or `<flow>` elements in your Mule configuration file and then then reference it.

For example, the following code defines two global transformers, which are referenced from two different places:

[source, xml, linenums]
----
<xm:xml-to-object-transformer name="XMLToExceptionBean" returnClass="org.mule.example.errorhandler.ExceptionBean"/>
<custom-transformer name="ExceptionBeanToErrorMessage" class="org.mule.example.errorhandler.ExceptionBeanToErrorMessage"
returnClass="org.mule.example.errorhandler.ErrorMessage"/>

...
<flow name="Error Manager">
  <inbound-endpoint address="file://./test-data/in" transformer-refs="XMLToExceptionBean ExceptionBeanToErrorMessage">
    <file:filename-wildcard-filter pattern="*.xml" />
  </inbound-endpoint>
    ...
</flow>
...
<flow name="Business Error Manager">
  <inbound-endpoint address="jms://exception.queue"/>
  <transformer ref="XMLToExceptionBean"/>
  <transformer ref="ExceptionBeanToErrorMessage"/>
  ...
</flow>
----

== Chaining Transformers

You can chain transformers together so that the output from one transformer becomes the input for the next. To chain transformers, you create a space-separated list of transformers in the `transformer-refs` or `responseTransformer-refs` attributes or by creating multiple `<transformer>` elements as shown above.

For example, this chain ultimately converts from a ByteArray to InputStream:

[source, code, linenums]
----
transformer-refs="ByteArrayToString StringToObject ObjectToInputStream"
----

You could also configure this as follows:

[source, xml, linenums]
----
<transformer ref="ByteArrayToString"/>
<transformer ref="StringToObject"/>
<transformer ref="ObjectToInputStream"/>
----

Note that if you specify transformer chains, any default transformers or discoverable transformers are not applied. If you want to use those transformers, you must specify them explicitly with the other chained transformers.

== Transformation Best Practices

Mule has an efficient transformation mechanism. Transformers are applied to inbound or outbound endpoints, and the data is transformed just before it is sent from a service or just before it is received by another service. Transformers can be concatenated, so it is simple to perform multiple transformations on data in transit.

There is no one standard approach for how and where transformations should occur. Some maintain that because transformation should always be applied on inbound/outbound data, transformations should be available as part of the enterprise service bus instead of inside the service components. This approach matches the concepts of Aspect Oriented Programming (AOP). Others conclude that it is far more efficient to encode the transformation logic into the service components themselves. In the second case, however, there is no distinction between code that is related to a business process and code that is generic enough to be reused, which contradicts the philosophy of an ESB.

While there is no industry best practice, MuleSoft recommends that developers examine their transformation logic to see if it will always be used (AOP) or if it is specific to a business process. In general, if it will always be used, you should use a transformer, and if it is specific to a single business process, it should be part of the service component.

Note the following cases where you should *not* configure a transformer:

* Default transformers: some transports have default transformers that are called by default, but only if you don't configure explicit transformations.
* Discoverable transformers: some transformers can be discovered and used automatically based on the type of message. You do not configure these transformers explicitly. These include custom transformers that have been defined as discoverable. For more information, see link:/documentation-3.2/display/32X/Creating+Custom+Transformers[Creating Custom Transformers].

**References:**http://msdn2.microsoft.com/en-us/library/aa480061.aspxhttp://blogs.ittoolbox.com/eai/applications/archives/transformation-in-a-soa-12186

== Available Transformers

Following are the transformers available with Mule. Some transformers are specific to a transport or module. For more information, see link:/documentation-3.2/display/32X/Transports+Reference[Transports Reference] and link:/documentation-3.2/display/32X/Modules+Reference[Modules Reference]. For a complete reference to the elements and attributes for the standard Mule transformers, see link:/documentation-3.2/display/32X/Transformers+Configuration+Reference[Transformers Configuration Reference].

=== Basic

The basic transformers are in the http://www.mulesoft.org/docs/site/current/apidocs/org/mule/transformer/simple/package-summary.html[org.mule.transformer.simple] package. They do not require any special configuration. For details on these transformers, see link:/documentation-3.2/display/32X/Transformers+Configuration+Reference[Transformers Configuration Reference].

[cols=",",options="header"]
|===
|Transformer |Description
|BeanBuilderTransformer
|(As of Mule 2.2) Constructs simple bean objects by defining the object and then setting a number of expressions used to populate the bean properties. For example: +

`<bean-builder-transformer name="testTransformer3" beanClass="org.mule.test.fruit.Orange">  <bean-property property-name="brand" evaluator="mule" expression="message.payload" optional="true"/>  <bean-property property-name="segments" evaluator="mule" expression="message.header(SEGMENTS)"/></bean-builder-transformer>`
|ByteArrayToHexString <-> +
HexStringToByteArray
|A pair of transformers that convert between byte arrays and hex strings.
|ByteArrayToMuleMessage <-> +
MuleMessageToByteArray
|A pair of transformers that convert between byte arrays and Mule messages.
|ByteArrayToObject <-> +
ObjectToByteArray
|A pair of transformers that convert between byte arrays and objects. If the byte array is not serialized, ByteArrayToObject returns a String created from the bytes as the returnType on the transformer.
|ByteArrayToSerializable <-> +
SerializableToByteArray
|A pair of transformers that serialize and deserialize objects.
|CombineCollectionsTransformer
|Takes a payload which is a Collection of Collections and turns into a single List. For example, if the payload is a Collection which contains a Collection with elements A and B and another Collection with elements C and D, this will turn them into a single Collection with elements A, B, C and D.
|ExpressionTransformer
|Evaluates one or more expressions on the current message and return the results as an Array. For details, see link:/documentation-3.2/display/32X/Using+Expressions[Using Expressions].
|MessagePropertiesTransformer
|A configurable message transformer that allows users to add, overwrite, and delete properties on the current message.
|ObjectArrayToString <-> +
StringToObjectArray
|A pair of transformers that convert between object arrays and strings. Use the configuration elements `<byte-array-to-string-transformer>` and `<string-to-byte-array-transformer>`.
|ObjectToInputStream
|Converts serializable objects to an input stream but treats java.lang.String differently by converting to bytes using the String.getBytes() method.
|ObjectToOutputHandler
|Converts a byte array into a String.
|ObjectToString
|Returns human-readable output for various kinds of objects. Useful for debugging.
|StringAppendTransformer
|Appends a string to an existing string.
|StringToObjectArray
|Converts a string to an object array. Use the configuration element `<string-to-byte-array-transformer>`.
|===

=== XML

The XML transformers are in the http://www.mulesoft.org/docs/site/current/apidocs/org/mule/module/xml/transformer/package-summary.html[org.mule.module.xml.transformer] package. They provide the ability to transform between different XML formats, use XSLT, and convert to POJOs from XML. For information, see link:/documentation-3.2/display/32X/XML+Module+Reference[XML Module Reference].

[cols=",",options="header",]
|===
|Transformer |Description
|link:/documentation-3.2/display/32X/XmlObject+Transformers[XmlToObject <-> ObjectToXml] |Converts XML to a Java object and back again using http://xstream.codehaus.org[XStream].
|link:/documentation-3.2/display/32X/JAXB+Transformers[JAXB XmlToObject <-> JAXB ObjectToXml] |Converts XML to a Java object and back again using the http://java.sun.com/developer/technicalArticles/WebServices/jaxb/[JAXB] binding framework (ships with JDK6)
|link:/documentation-3.2/display/32X/XSLT+Transformer[XSLT] |Transforms XML payloads using XSLT.
|link:/documentation-3.2/display/32X/XQuery+Transformer[XQuery] |Transforms XML payloads using http://en.wikipedia.org/wiki/XQuery[XQuery].
|link:/documentation-3.2/display/32X/DomToXml+Transformer[DomToXml <-> XmlToDom] |Converts DOM objects to XML and back again.
|link:/documentation-3.2/display/32X/XmlToXMLStreamReader+Transformer[XmlToXMLStreamReader] |Converts XML from a message payload to a StAX XMLStreamReader.
|link:/documentation-3.2/display/32X/XPath+Extractor+Transformer[XPath Extractor] |Queries and extracts object graphs using XPath expressions using JAXP.
|link:/documentation-3.2/display/32X/JXPath+Extractor+Transformer[JXPath Extractor] |Queries and extracts object graphs using XPath expressions using JXPath.
|link:/documentation-3.2/display/32X/XmlPrettyPrinter+Transformer[XmlPrettyPrinter] |Allows you to output the XML with controlled formatting, including trimming white space and specifying the indent.
|===

=== JSON

The JSON transformers are in the http://www.mulesoft.org/docs/site/current/apidocs/org/mule/module/json/transformers/package-summary.html[org.mule.module.json.transformers] package. They provide the ability to work with JSON documents and bind them automatically to Java objects. For information, see link:/documentation-3.2/display/32X/Native+Support+for+JSON[Native Support for JSON].

=== Scripting

The link:/documentation-3.2/display/32X/Scripting+Module+Reference[Scripting] transformer transforms objects using scripting, such as JavaScript or http://groovy.codehaus.org[Groovy] scripts. This transformer is in the http://www.mulesoft.org/docs/site/current/apidocs/org/mule/module/scripting/transformer/package-summary.html[org.mule.module.scripting.transformer] package.

=== Encryption

The encryption transformers are in the http://www.mulesoft.org/docs/site/current/apidocs/org/mule/transformer/encryption/package-summary.html[org.mule.transformer.encryption] package.

[cols=",",options="header",]
|===
|Transformer |Description
|link:/documentation-3.2/display/32X/Transformers+Configuration+Reference#TransformersConfigurationReference-encrypt[Encryption <-> Decryption] |A pair of transformers that use a configured EncryptionStrategy implementation to encrypt and decrypt data.
|===

=== Compression

The compression transformers are in the http://www.mulesoft.org/docs/site/current/apidocs/org/mule/transformer/compression/package-summary.html[org.mule.transformer.compression] package. They do not require any special configuration.

[cols=",",options="header",]
|===
|Transformer |Description
|link:/documentation-3.2/display/32X/Transformers+Configuration+Reference#TransformersConfigurationReference-gzip[GZipCompressTransformer <-> GZipUncompressTransformer] |A pair of transformers that compress and uncompress data.
|===

=== Encoding

The encoding transformers are in the http://www.mulesoft.org/docs/site/current/apidocs/org/mule/transformer/codec/package-summary.html[org.mule.transformer.codec] package. They do not require any special configuration.

[cols=",",options="header",]
|===
|Transformer |Description
|link:/documentation-3.2/display/32X/Transformers+Configuration+Reference#TransformersConfigurationReference-base64[Base64Encoder <-> Base64Decoder] |A pair of transformers that convert to and from Base 64 encoding.
|link:/documentation-3.2/display/32X/Transformers+Configuration+Reference#TransformersConfigurationReference-xml[XMLEntityEncoder <-> XMLEntityDecoder] |A pair of transformers that convert to and from XML entity encoding.
|===

=== Email

The Email transport provides several transformers for converting from email to string, object to MIME, and more. For details, see link:/documentation-3.2/display/32X/Email+Transport+Reference[Email Transport Reference].

=== File

The File transport provides transformers for converting from a file to a byte array (byte[]) or a string. For details, see link:/documentation-3.2/display/32X/File+Transport+Reference[File Transport Reference].

=== HTTP

The HTTP transport provides several transformers for converting an HTTP response to a Mule message or string, and for converting a message to an HTTP request or response. For details, see link:/documentation-3.2/display/32X/HTTP+Transport+Reference[HTTP Transport Reference]. Additionally, the Servlet transport provides transformers that convert from HTTP requests to parameter maps, input streams, and byte arrays. For details, see link:/documentation-3.2/display/32X/Servlet+Transport+Reference[Servlet Transport Reference].

=== JDBC image:/documentation-3.2/download/attachments/12257119/eetiny.png?version=1&modificationDate=1214340317088[image,title="Available in Mule Enterprise only"]

The Mule Enterprise version of the JDBC transport provides transformers for moving CSV and XML data from files to databases and back. For details, see link:/documentation-3.2/display/32X/JDBC+Transport+Reference[JDBC Transport Reference].

=== JMS

The link:/documentation-3.2/display/32X/JMS+Transport+Reference[JMS Transport Reference] and link:/documentation-3.2/display/32X/Mule+WMQ+Transport+Reference[Mule WMQ Transport Reference] (enterprise only) both provide transformers for converting between JMS messages and several different data types.

=== Strings and Byte Arrays

The link:/documentation-3.2/display/32X/Multicast+Transport+Reference[Multicast Transport Reference] and link:/documentation-3.2/display/32X/TCP+Transport+Reference[TCP Transport Reference] both provide transformers that convert between byte arrays and strings.

=== XMPP

The XMPP transport provides transformers for converting between XMPP packets and strings. For details, see link:/documentation-3.2/display/32X/XMPP+Transport+Reference[XMPP Transport Reference].

== Common Attributes

Following are the attributes that are common to all transformers.

=== returnClass

This specifies the name of the Java class that the transformer returns.

=== ignoreBadInput

If set to true, the transformer will ignore any data that it does not know how to transform, but any transformers following it in the current chain will be called. If set to false, the transformer will also ignore any data that it does not know how to transform, but no further transformations will take place.

=== mimeType

This mime type will be set on all messages that this transformer produces.

=== encoding

This encoding will be set on all messages that this transformer produces.
